Switches to a RESTful API based approach, whereby we store certificates sent to the service in a database, and they are returned in JSON API responses instead of a zip file. Also, authentication token management is now through the RESTful API, rather than through the use of a config file.

--- a/.env.example
+++ b/.env.example
@@ -11,10 +11,21 @@ ENVIRONMENT="dev"
 
 # Specify if you wish for this service to manage TLS/SSL. You should only set this to 0
 # if you are running behind a proxy that does this for you.
-SSL_ENABLED=1
+SSL_ENABLED=0
 
 
 # Specify the ID and group ID of your user. You only need to specify these if you
 # are developing this codebase.
 #HOST_USER_ID=1000
 #HOST_GROUP_ID=1000
+
+
+# provide the base64 encoded hash of the admin password. You can generate this by running php -a and then entering
+# echo base64_encode(password_hash("mySuperSecurePasswordGoesHere", PASSWORD_DEFAULT));
+ADMIN_AUTH_TOKEN_HASH=""
+
+
+# Specify the database credentials.
+DB_NAME=
+DB_USER=
+DB_PASSWORD=
