--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,6 +6,8 @@ services:
     container_name: app
     image: ${DOCKER_IMAGE_NAME}
     restart: always
+    depends_on:
+      - db
     ports:
       - "80:80"
       - "443:443"
@@ -14,5 +16,26 @@ services:
       - ./certs:/certs:ro
       - ./configs:/configs:ro
     environment:
+      - ADMIN_AUTH_TOKEN_HASH
       - ENVIRONMENT
       - SSL_ENABLED
+      - DB_USER
+      - DB_PASSWORD
+      - DB_NAME
+      - DB_HOST=db
+
+  db:
+    image: postgres:16.4-bullseye
+    container_name: db
+    restart: always
+    environment:
+      - POSTGRES_USER=${DB_USER}
+      - POSTGRES_PASSWORD=${DB_PASSWORD}
+      - POSTGRES_DB=${DB_NAME}
+    volumes:
+      - db-data:/var/lib/postgresql/data
+
+volumes:
+  db-data:
+    driver: local
+
